--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-cached": "0.0.3",
     "gulp-remember": "~0.2.0",
     "gulp-streamify": "0.0.5",
-    "gulp-load-plugins": "~0.5.1"
+    "gulp-load-plugins": "~0.5.1",
+    "gulp-size": "~0.3.1"
   }
 }
